Revamp decompilation tests
This commit removes old obsolete decompilation tests, that were no
longer used, and replaces them with tests for various features of the
decompiler.
* DLA capability to recover complex data structure like linked-lists
  and arrays.
* DLA capability to update segment and section types, so that we emit
  nice looking accesses to segments in C.
* Capability to emit nice looking integer literals in C
* Capability to emit inline string literals in C and update the model
  types of the segments containg such string literals.

All the actual tests are implmented in revng-c, based on FileCheck.
Here we're adding only the original source, and recipes to compile the
code to generated the binaries that are then used in revng-c for tests.

--- a/share/revng/test/configuration/revng-qa/compile.yml
+++ b/share/revng/test/configuration/revng-qa/compile.yml
@@ -1,14 +1,19 @@
 tags:
+  - name: clang
   - name: simple-executable
-
   - name: stripped
   - name: with-debug-info
 commands:
   - type: revng-qa.compiled-with-debug-info
     from:
       - type: source
-        filter: linux and simple-executable
+        filter: linux and simple-executable and !clang
     command: ${TRIPLE}gcc $INPUT -o $OUTPUT $GCC_CFLAGS $COMMON_CFLAGS
+  - type: revng-qa.compiled-with-debug-info
+    from:
+      - type: source
+        filter: linux and simple-executable and clang
+    command: ${TRIPLE}clang $INPUT -o $OUTPUT $GCC_CFLAGS $COMMON_CFLAGS
   - type: revng-qa.compiled-stripped
     from:
       - type: revng-qa.compiled-with-debug-info
