Handle parallel building with cl.exe
`cl.exe` puts temporary files with static names into the current working
directory. This was the reason why we were preventing `cl.exe` from
running in parallel.

This commit ensures we always `cd` to a temporary directory before using
`cl.exe`.

This also enables us to get rid of the `pool` feature entirely.

--- a/share/revng/test/configuration/revng-qa/for-import-pe.yml
+++ b/share/revng/test/configuration/revng-qa/for-import-pe.yml
@@ -38,17 +38,23 @@ commands:
       - type: source
         filter: windows and simple-executable
     suffix: .exe
-    pool: wine
     command: |-
-      timeout 30 ${MSVC_TRIPLE}cl z:\$INPUT -Fe$OUTPUT $MSVC_CFLAGS $COMMON_CFLAGS -link $LDFLAGS
+      ROOT="$$PWD";
+      TEMP="$$(temp -d)";
+      cd "$$TEMP";
+      timeout 30 ${MSVC_TRIPLE}cl z:\\$INPUT -Fez:\\"$$ROOT"/$OUTPUT $MSVC_CFLAGS $COMMON_CFLAGS -link $LDFLAGS;
+      cd -
   - type: revng-qa.generated-pdb
     from:
       - type: source
         filter: windows and simple-executable
     suffix: .pdb
-    pool: wine
     command: |-
-      timeout 30 ${MSVC_TRIPLE}cl z:\$INPUT $MSVC_CFLAGS $COMMON_CFLAGS -link /pdb:$OUTPUT $MSVC_LDFLAGS
+      ROOT="$$PWD";
+      TEMP="$$(temp -d)";
+      cd "$$TEMP";
+      timeout 30 ${MSVC_TRIPLE}cl z:\\$INPUT $MSVC_CFLAGS $COMMON_CFLAGS -link /pdb:z:\\"$$ROOT"/$OUTPUT $MSVC_LDFLAGS;
+      cd -
 
   - type: revng-qa.disassembled
     from:
