--- a/share/revng/test/configuration/revng-qa/for-decompilation.yml
+++ b/share/revng/test/configuration/revng-qa/for-decompilation.yml
@@ -24,6 +24,7 @@ sources:
       - segments-and-sections.c
       - pretty-ints.c
       - dual-case-switch.c
+      - reduce-c-casts.c
   - tags: [simple-executable, native, dynamic, for-decompilation, clang, linked-lists-flags]
     prefix: share/revng/test/tests/analysis/Decompilation/clang/
     members:
