--- a/share/revng/test/configuration/revng-qa/for-runtime-abi-tests.yml
+++ b/share/revng/test/configuration/revng-qa/for-runtime-abi-tests.yml
@@ -7,6 +7,14 @@ tags:
         # Safeguard in case somebody tries using it with msvc
         - -DABIDEF=UNSUPPORTED
 
+  - name: x86-64-apple-abi
+    implies: [apple-x86-64]
+    variables:
+      ABI_NAME: SystemV_x86_64
+      MSVC_CFLAGS:
+        # Safeguard in case somebody tries using it with msvc
+        - -DABIDEF=UNSUPPORTED
+
   - name: x86-64-microsoft-abi
     implies: [x86-64]
     variables:
@@ -27,6 +35,14 @@ tags:
 
   - name: i386-systemv-abi
     implies: [i386]
+    variables:
+      ABI_NAME: SystemV_x86
+      MSVC_CFLAGS:
+        # Safeguard in case somebody tries using it with msvc
+        - -DABIDEF=UNSUPPORTED
+
+  - name: i386-apple-abi
+    implies: [apple-i386, clang]
     variables:
       ABI_NAME: SystemV_x86
       MSVC_CFLAGS:
@@ -146,8 +162,21 @@ tags:
         # Safeguard in case somebody tries using it with gcc
         - -DABIDEF=UNSUPPORTED
 
+  - name: aarch64-aapcs64-apple-abi
+    implies: [apple-aarch64]
+    variables:
+      ABI_NAME: Apple_AAPCS64
+      MSVC_CFLAGS:
+        # Safeguard in case somebody tries using it with gcc
+        - -DABIDEF=UNSUPPORTED
+
   - name: arm-aapcs-abi
     implies: [arm]
+    variables:
+      ABI_NAME: AAPCS
+
+  - name: arm-aapcs-apple-abi
+    implies: [apple-arm]
     variables:
       ABI_NAME: AAPCS
 
@@ -179,6 +208,10 @@ sources:
     repeat-for:
       - [x86-64-systemv-abi]
 
+      # This test is temporarily disabled because of a clang bug.
+      # (https://github.com/llvm/llvm-project/issues/55844)
+      # - [x86-64-apple-abi]
+
       - [x86-64-microsoft-abi, windows]
       - [x86-64-vectorcall-microsoft-abi, windows]
 
@@ -198,10 +231,19 @@ sources:
       - [i386-stdcall-microsoft-abi, windows]
       - [i386-vectorcall-microsoft-abi, windows]
 
+      # Disabled for now because `ld64.lld` does not recognize the architecture
+      # TODO: look further into this.
+      # - [i386-apple-abi]
+
       - [aarch64-aapcs64-abi]
+      - [aarch64-aapcs64-apple-abi]
       - [aarch64-aapcs64-microsoft-abi, windows]
 
       - [arm-aapcs-abi]
+
+      # Disabled for now because `ld64.lld` does not recognize the architecture
+      # TODO: look further into this.
+      # - [arm-aapcs-apple-abi]
 
       # TODO: re-enable once mips testing suite is fixed.
       # - [mips-systemv-abi]
@@ -217,7 +259,7 @@ commands:
   - type: revng-qa.runtime-abi-tests
     from:
       - type: source
-        filter: for-runtime-abi-tests and !windows
+        filter: for-runtime-abi-tests and !windows and !apple
     suffix: /
     command: |-
       "${INPUT}/build_abi_test_binaries_with_gcc.sh"
@@ -225,6 +267,21 @@ commands:
         "${OUTPUT}"
         "${TRIPLE}"
         "${GCC_CFLAGS} ${COMMON_CFLAGS}"
+        "${OBJDUMP_FLAGS}"
+
+  - type: revng-qa.runtime-abi-tests
+    from:
+      - type: source
+        filter: for-runtime-abi-tests and !windows and apple
+    suffix: /
+    command: |-
+      "${INPUT}/build_abi_test_binaries_with_clang.sh"
+        "${INPUT}"
+        "${OUTPUT}"
+        "${TRIPLE}"
+        "${GCC_CFLAGS} ${COMMON_CFLAGS}"
+        "${CLANG_CFLAGS}"
+        "${APPLE_NAME}"
         "${OBJDUMP_FLAGS}"
 
   - type: revng-qa.runtime-abi-tests
