Run revng-check-conventions

--- a/share/revng/test/configuration/revng-qa/architectures.yml
+++ b/share/revng/test/configuration/revng-qa/architectures.yml
@@ -4,11 +4,11 @@ tags:
     variables:
       MSVC_CFLAGS:
         - -WX # treats warnings as errors
-        - -nologo # supresses startup banner
+        - -nologo # suppresses startup banner
       MSVC_LDFLAGS:
         # Sadly, msvc linker only supports `/`-style parameters.
         - /debug # creates debug information
-        - /nologo # supresses startup banner
+        - /nologo # suppresses startup banner
         - /wx # treats warnings as errors
   - name: apple
 
